# pyLIMA

./: .buildinfo  .gitignore  .travis.yml  Conventions.html  Dockerfile  Example.html  Install.html  Installation.html  InstallationForMACUser.html  Libraries.html  MANIFEST.in  Makefile  README.md  RecompileVBBinaryLensing.html  Requirements.html  Troubleshooting.html  VirtualEnv.html  genindex.html  index.html  installation_mac.html  manager.py  modules.html  objects.inv  py-modindex.html  pyLIMA.event.html  pyLIMA.html  pyLIMA.manager.html  pyLIMA.microlfits.html  pyLIMA.microlguess.html  pyLIMA.microllimb_darkening.html  pyLIMA.microlmagnification.html  pyLIMA.microlmodels.html  pyLIMA.microlorbitalmotion.html  pyLIMA.microloutputs.html  pyLIMA.microlparallax.html  pyLIMA.microlplotter.html  pyLIMA.microlpriors.html  pyLIMA.microlsimulator.html  pyLIMA.microlstats.html  pyLIMA.microltoolbox.html  (+27 more)
.github/workflows/: actions_unit_tests.yaml
Fitter/: Check_fits.py  Check_fits_OGLE.py  __init__.py  event.py  manager.py  microlfits.py  microllimb_darkening.py  microlmagnification.py  microlmodels.py  microloutputs.py  microlparallax.py  microlplotter.py  mlplotter.py  run_test.py  telescopes.py  test_microlfits.py  test_parallax.py
Fitter/FSPL/: Fits_FSPL_Blend.txt  Fits_FSPL_Blend_errors.txt  Fits_FSPL_Error.txt  Fits_FSPL_Source.txt
Fitter/Ground/: Fits_Ground_Blend.txt  Fits_Ground_Error.txt  Fits_Ground_Source.txt  Fits_Ground_Source_errors.txt
Fitter/OGLE_2015/: Fits_OGLE_2015.txt  Fits_OGLE_2015_Blend.txt  Fits_OGLE_2015_Error.txt  (+2 more)
_modules/: index.html
_sources/: Example.txt  Installation.txt  pyLIMA.manager.txt  pyLIMA.microlguess.txt  pyLIMA.microlmagnification.txt  pyLIMA.microlmodels.txt  pyLIMA.microloutputs.txt  pyLIMA.telescopes.txt  pyLIMA.txt
doc/: Makefile  toto
docs/: Makefile  conf.py  index.rst  requirements.txt
doctrees/: Example.doctree  Installation.doctree  environment.pickle  index.doctree  modules.doctree  pyLIMA.doctree  pyLIMA.event.doctree  pyLIMA.manager.doctree  pyLIMA.microlfits.doctree  pyLIMA.microlguess.doctree  pyLIMA.microllimb_darkening.doctree  pyLIMA.microlmagnification.doctree  pyLIMA.microlmodels.doctree  pyLIMA.microloutputs.doctree  pyLIMA.microlparallax.doctree  pyLIMA.microltoolbox.doctree  pyLIMA.telescopes.doctree
examples/: SAGAN_binary_1.ipynb  SAGAN_binary_2.ipynb  SAGAN_binary_3.ipynb  SAGAN_binary_3_old.ipynb  pyLIMA_example_1.ipynb  pyLIMA_example_1.py  pyLIMA_example_1_new.ipynb  pyLIMA_example_1_new.py  pyLIMA_example_2.ipynb  pyLIMA_example_2.py  pyLIMA_example_2_new.ipynb  pyLIMA_example_2_new.py  pyLIMA_example_3.ipynb  pyLIMA_example_3.py  pyLIMA_example_3_new.ipynb  pyLIMA_example_3_new.py  pyLIMA_example_3b.ipynb  pyLIMA_example_3b.py  pyLIMA_example_3b_new.ipynb  pyLIMA_example_3b_new.py  pyLIMA_example_4.ipynb  pyLIMA_example_4.py  pyLIMA_example_4_new.ipynb  pyLIMA_example_4_new.py  pyLIMA_example_5.ipynb  pyLIMA_example_5.py  pyLIMA_example_5_new.ipynb  pyLIMA_example_5_new.py  pyLIMA_example_6.py
html/: Example.html  Installation.html  genindex.html  modules.html  pyLIMA.event.html  pyLIMA.manager.html  pyLIMA.microlfits.html  pyLIMA.microlmagnification.html  pyLIMA.microlmodels.html  pyLIMA.microltoolbox.html  pyLIMA.telescopes.html  searchindex.js
pyLIMA/: __init__.py  event.py  manager.py  microlcaustics.py  microlfits.py  microlguess.py  microllimb_darkening.py  microlmagnification.py  microlmodels.py  microlorbitalmotion.py  microloutputs.py  microlparallax.py  microlpriors.py  microlsimulator.py  microlstats.py  microltoolbox.py  microlxallarap.py  run_test.py  signalmen.py  stars.py  telescopes.py
source/: conf.py  index.rst  pyLIMA.event.rst  pyLIMA.microlfits.rst  pyLIMA.microllimb_darkening.rst
(+255 files in other folders)
