[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyLIMA"
description = "Microlsening analysis package."
version = "1.9.2"
keywords = ['Microlsening analysis package']
authors = [
    { name = "Etienne Bachelet", email = "etibachelet@gmail.com" },
]
license = { text = "GPL-3.0" }
requires-python = ">=3.6,<4"
readme = "README.md"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Build Tools',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python :: 3',
]
dependencies = [
    "astropy",
    "astroquery",
    "bokeh < 3",
    "emcee",
    "importlib-metadata",
    "kepler.py",
    "numpy >= 1.7",
    "pygtc",
    "pymoo",
    "scipy >= 1.0",
    "tqdm >= 4.0",
    "VBBinaryLensing>=3.6.2",
]

[project.urls]
Homepage = "http://github.com/ebachelet/pyLIMA"
Documentation = "https://pylima.readthedocs.io/en/latest/"

[tools.setuptools.package-data]
"" = ["Claret2011.fits", "Yoo_B0B1.dat"]

